syntax = "proto3";

package todo.v1;

option go_package = "github.com/yourorg/monorepo/packages/proto-gen-go/todo/v1;todov1";
option java_package = "monorepo.proto.todo.v1";
option java_multiple_files = true;

// Todo represents a task item
message Todo {
  // Unique identifier for the todo
  string id = 1;

  // User ID - owner/tenant of this todo
  string user_id = 2;

  // Title of the todo
  string title = 3;

  // Detailed description of the todo
  string description = 4;

  // Status of the todo
  TodoStatus status = 5;

  // Priority level of the todo
  Priority priority = 6;

  // User ID of the assignee
  string assignee = 7;

  // Due date in Unix timestamp (seconds)
  int64 due_date = 8;

  // Creation timestamp in Unix timestamp (seconds)
  int64 created_at = 9;

  // Last update timestamp in Unix timestamp (seconds)
  int64 updated_at = 10;
}

// TodoStatus represents the status of a todo item
enum TodoStatus {
  TODO_STATUS_UNSPECIFIED = 0;
  TODO_STATUS_PENDING = 1;
  TODO_STATUS_COMPLETED = 2;
}

// Priority represents the priority level of a todo
enum Priority {
  PRIORITY_UNSPECIFIED = 0;
  PRIORITY_LOW = 1;
  PRIORITY_MEDIUM = 2;
  PRIORITY_HIGH = 3;
  PRIORITY_URGENT = 4;
}
